# sqlx-custom-type-unnest

./: Cargo.toml  README.md  docker-compose.yml  flake.nix
examples/record-single-element/: main.rs
examples/record-single-element-dependent-with-name/: main.rs
examples/record-two-element/: main.rs
migrations/: 20220717123255_Initial_Scheme.sql
src/: main.rs
