[package]
name = "sqlx-custom-type-unnest"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.58"
sqlx = { version = "0.6.0", features = ["postgres", "runtime-tokio-rustls"] }
tokio = { version = "1.20.0", features = ["full"] }
tokio-stream = "0.1.9"
